2.2.0.DEV
----------------

- use sha256 instead of md5 checksums for serving own files
  (BACKWARD INCOMPATIBLE: needs export/import)

- parse arbitrary checksums from PyPI in preparation for 
  a pending change on pypi.python.org which will see 
  it serving sha256 checksums only.


2.1.5
----------------

- fix devpi-ldap issue17: the push command directly used the username instead
  of using a general permission check, that caused groups in acl_upload to not
  be honored.
- fix issue171: "devpi push" of an existing package fails on non volatile index
  and overwrites on volatile.
- before devpi-server 2.1.5 it was possible to upload multiple documentation
  zip files for the same package version if the filename differed in case, this
  broke export and replication of server state and the documentation view.
  Now the newest upload will be used and older ones ignored.

2.1.4
----------------

- fix issue214: the whitelisting code stopped inheritance too early.

- fix regression: easy_install went to the full simple project list for a
  non existing project.

- When uploading an existing version to a non-volatile index, it's now a
  no op instead of an error if the content is identical. If the content is
  different, it's still an error.

- Uploading documentation to non-volatile indexes is now protected the same
  way as packages.

- added code to allow filtering on packages with stable version numbers.

- Change nginx template to set the X-outside-url header based on the
  requested URL.  This makes it possible to connect by IP address when
  the server name is not in DNS.

2.1.3
----------------

- fix replication when files with identical name are later changed. This can
  happen with toxresults. These kind of errors are tracked and when a later
  changeset fixes them, the error is removed. The errors are exposed through
  the /+status view of replica servers.

- fix issue179: protect deletion of versions 
